# itunes-api-explorer

./: README.md  pyproject.toml
itunes_explorer/: client.py  models.py
tests/: test_client.py
tests/fixtures/: sample_response.json
